--- a/index.html
+++ b/index.html
@@ -3,38 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arvin Cabrera | Web Developer Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Portfolio</title>
+    
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="assets/img/groom.gif">
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Roboto&display=swap" rel="stylesheet">
+    <!-- Css -->
+    <link rel="stylesheet" href="assets/style.css">
 
-    <!-- bootstrap -->
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Div create a wrapper/container for our layout -->
-    <!-- class is an attribute to name our div -->
-    <div class="container-fluid">
-        <!-- id is attribute to name a tag uniquely -->
-        <section class="text-center mt-5" id="landing">
-
-            <!-- header -->
-            <h1>Full Stack Web Developer</h1>
-            <!-- Paragraph -->
-            <p>HI! My name is arvin and i love building things from scratch</p>
-
-            <img src="img/profile.jpg" class="img-fluid" id="profile">
-
-            <!-- anchor -->
-            <a href="" class="btn btn-success btn-lg mt-3" >Let's work together</a>
-
+    <header>
+        <img src="assets/img/groom.gif" class="logo"></a>
+        <nav>
+            <a href="#sec1" class="active">Home</a>
+            <a href="#sec2">About</a>
+            <a href="#sec3">Skills</a>
+            <a href="#sec4">Contact</a>
+        </nav>
+    </header>
+        <!-- Section -->
+        <section id ="sec1">
+            <div class="one">
+                <h1>Hi! i am <span>Arvin Cabrera</span></h1>
+                <p>Welcome to my online portfolio, where imagination merges with cutting-edge craftsmanship. Explore my body of work to witness a journey fueled by enthusiasm, expertise, and unwavering commitment. I encourage you to uncover the narratives behind my creations and envision the boundless potential ahead. Your visit is deeply appreciated, and I trust you'll discover a wellspring of inspiration within these digital canvases.
+                </p>
+                <i class="ri-facebook-fill"><a href="https://www.facebook.com/arvincabrera.0"></a></i>
+                    <i class="ri-instagram-line"><a href=""></a></i>
+                    <i class="ri-twitter-line"><a href=""></a></i>
+                    <i class="ri-mail-line"><a href=""></a></i>
+                    <a href="assets/pdf/resume.pdf" download class="resume">Download CV</a>
+            </div>
+            <div class="image">
+                <img src="assets/img/profile.jpg">
+            </div>
         </section>
-    </div>
 
-    <!-- Bootstrap JS LINK -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    
+
+        <section id="sec2">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis voluptatum placeat esse dolorem consequuntur voluptates beatae repudiandae temporibus doloremque nulla itaque nemo, voluptate illum laudantium commodi nisi amet! Alias, culpa!
+            </p>
+        </section>
+
+        <section id="sec3">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis voluptatum placeat esse dolorem consequuntur voluptates beatae repudiandae temporibus doloremque nulla itaque nemo, voluptate illum laudantium commodi nisi amet! Alias, culpa!
+            </p>
+        </section>
+
+        <section id="sec4">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis voluptatum placeat esse dolorem consequuntur voluptates beatae repudiandae temporibus doloremque nulla itaque nemo, voluptate illum laudantium commodi nisi amet! Alias, culpa!
+            </p>
+        </section>
+
+    <!-- Section -->
+
+    <!-- Footer -->
+    <footer>
+        <p>Author: Arvin C</p>
+        <p><a href="cabrera.arvin.07@gmail.com">cabrera.arvin.07@gmail.com</a></p>
+      </footer>
+      <!-- Footer -->
+
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
